--- a/package_creation/python/CMakeLists.txt
+++ b/package_creation/python/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.8.3)
 
-project(vecloc_eye_tribe)
+project(project_name)
 
 find_package(catkin REQUIRED COMPONENTS)
 
